# login

./: LICENSE  README.md
back-ends/axum_login/: .env.example  .env.test  .gitignore  Cargo.toml  README.md
back-ends/axum_login/migration/src/: lib.rs  m20250407_081131_create_users_table.rs
back-ends/axum_login/src/: lib.rs  main.rs
back-ends/axum_login/src/db/: connection.rs  mod.rs
back-ends/axum_login/src/entities/: mod.rs  prelude.rs  user.rs
back-ends/axum_login/src/handlers/: api.rs  login.rs  mod.rs  users.rs
back-ends/axum_login/src/helpers/: mail.rs  mod.rs  templates.rs  users.rs
back-ends/axum_login/src/middlewares/: auth.rs
back-ends/axum_login/src/routes/: api.rs  login.rs  mod.rs  users.rs
back-ends/axum_login/src/translator/: translator.rs
back-ends/axum_login/templates/: base_email.html.tera  style.css
back-ends/axum_login/templates/create_account/: email.html.tera  email.txt.tera
back-ends/axum_login/templates/forgot_password/: email.html.tera  email.txt.tera
back-ends/axum_login/templates/verify_email/: email.html.tera  email.txt.tera
back-ends/axum_login/tests/: auth_tests.rs  login_tests.rs  user_tests.rs
back-ends/axum_login/tests/common/: mod.rs
back-ends/axum_login/translations/: en.json  fr.json
front-ends/iced_login/: .build-docker.sh  .gitignore  Cargo.toml  Dockerfile  build.sh  config.toml.example
front-ends/iced_login/src/: config.rs  main.rs
front-ends/iced_login/src/helpers/: mod.rs  token.rs  validators.rs
front-ends/iced_login/src/pages/: mod.rs
front-ends/iced_login/src/pages/test/: mod.rs  (+1 more)
front-ends/iced_login/src/styles/: containers.rs  mod.rs
front-ends/iced_login/translations/: en.json  fr.json
(+227 files in other folders)
