[package]
name = "axum_login"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
anyhow = { version = "1.0" }
serde = { version = "1.0.219", features = ["derive"] }
tower = "0.5.2"
log = "0.4.27"
log4rs = "1.3.0"
dotenv = "0.15.0"
sea-orm = { version = "1.1.8", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
sea-orm-migration = "1.1.8"
migration = { path = "./migration" }
password-worker = "0.4.0"
jwt-simple = { version = "0.12.12", default-features = false, features = ["pure-rust"] }
validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.0"
lettre = { version = "0.11.15", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls", "rustls-native-certs", "ring"] }
dotenvy = "0.15.7"
tower-http = { version = "0.6.2", features = ["full"] }
strum = "0.27.1"
strum_macros = "0.27.1"
tera = "1.20.0"

[dev-dependencies]
sea-orm = { version = "1.1.8", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
