[package]
name = "iced_login"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio"] }
iced_aw = { version = "0.13.1", features = ["spinner"] }
keyring = {version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"]}
lazy_static = "1.5.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
sys-locale = "0.3.2"
toml = "1.1.0"
